fix: Change where name word-wraps as width drops

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -39,11 +39,11 @@
     width: 8.33%;
     /* border: 2px solid red !important; / * Border For initial testing */
 }
-/*
+
 .col-2 {
     width: 16.66%;
 }
-
+/*
 .col-3 {
     width: 25%;
 }
@@ -73,11 +73,11 @@
 .col-9 {
     width: 75%;
 }
-
+*/
 .col-10 {
     width: 83.33%;
 }
-
+/*
 .col-11 {
     width: 91.66%;
 }
@@ -90,10 +90,10 @@
 /* Styles for images */
 
 .udacity-logo {
-    width: 20%;         /* scaled as percent of parent col-6 */
+    width: 75%;         /* scaled as percent of parent col-2 */
     height: auto;
     float: left;
-    margin-left: 2%;    /* 2% of a half-width cell = 1% of full-width */
+    margin-left: 6%;
 }
 
 .hero-image {
